feat: initial frontend app

--- a/apps/inventory-web/package.json
+++ b/apps/inventory-web/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "next": "~16.0.1",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "lucide-react": "^0.562.0"
   }
 }
