--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@nestjs/platform-express": "^11.0.0",
     "axios": "^1.6.0",
     "express": "^4.21.2",
+    "lucide-react": "^0.562.0",
     "next": "~16.0.1",
     "react": "19.0.0",
     "react-dom": "19.0.0",
