--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,33 +4,6 @@
   "files": [],
   "references": [
     {
-      "path": "./apps/api"
-    },
-    {
-      "path": "./apps/shop-e2e"
-    },
-    {
-      "path": "./apps/shop"
-    },
-    {
-      "path": "./libs/api/products"
-    },
-    {
-      "path": "./libs/shared/models"
-    },
-    {
-      "path": "./libs/shop/data"
-    },
-    {
-      "path": "./libs/shop/feature-product-detail"
-    },
-    {
-      "path": "./libs/shop/feature-products"
-    },
-    {
-      "path": "./libs/shop/shared-ui"
-    },
-    {
       "path": "./libs/shared/test-utils"
     },
     {
@@ -44,6 +17,9 @@
     },
     {
       "path": "./apps/inventory-api"
+    },
+    {
+      "path": "./libs/api/inventory"
     }
   ]
 }
