fix: optimistic locking

--- a/apps/inventory-api-e2e/tsconfig.json
+++ b/apps/inventory-api-e2e/tsconfig.json
@@ -2,10 +2,15 @@
   "extends": "../../tsconfig.base.json",
   "compilerOptions": {
     "outDir": "out-tsc/@org/inventory-api-e2e",
+    "rootDir": "../../",
     "esModuleInterop": true,
     "noUnusedLocals": false,
     "noImplicitAny": false
   },
   "include": ["jest.config.ts", "src/**/*.ts"],
-  "references": []
+  "references": [
+    {
+      "path": "../../libs/api/inventory"
+    }
+  ]
 }
